[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/eurocine/Eurocine Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/FlatUI/kenneyUI-yellow.tres" type="Theme" id=2]
[ext_resource path="res://assets/demo_project.gd" type="Script" id=3]
[ext_resource path="res://assets/list.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/1x/Asset 2.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/1x/Asset 1.png" type="Texture" id=6]
[ext_resource path="res://assets/card.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.886275, 0.913725, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 43
outline_size = 2
outline_color = Color( 0.121569, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0.294118, 0.0745098, 1 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="demo_project" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 88.0
color = Color( 0.419608, 0.392157, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 851.039
margin_right = 1025.04
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_list" type="Button" parent="."]
margin_right = 192.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "New_list"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="project_view" type="ScrollContainer" parent="."]
margin_top = 88.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 11
size_flags_vertical = 11
follow_focus = true
scroll_horizontal = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_container" type="HBoxContainer" parent="project_view"]
margin_right = 1024.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11

[node name="card" type="Label" parent="."]
margin_left = -477.845
margin_top = 13.4437
margin_right = -277.845
margin_bottom = 73.4437
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1014.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0745098, 0.0705882, 0.0705882, 0.654902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control"]
margin_left = 402.09
margin_top = 271.836
margin_right = 626.09
margin_bottom = 324.836
theme = ExtResource( 2 )
align = 3
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="Button" parent="Control"]
margin_left = 402.09
margin_top = 324.836
margin_right = 489.09
margin_bottom = 384.836
custom_fonts/font = SubResource( 1 )
text = "done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="Control"]
margin_left = 529.942
margin_top = 324.836
margin_right = 623.942
margin_bottom = 384.836
custom_fonts/font = SubResource( 1 )
text = "cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_label" type="Label" parent="."]
margin_left = 369.0
margin_right = 689.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.901961, 0.827451, 0.0901961, 1 )
custom_colors/font_color_shadow = Color( 0.796078, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = -2
text = "space_ship"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="VBoxContainer" parent="."]
margin_left = -203.877
margin_top = 88.0
margin_right = -3.87689
margin_bottom = 209.0
rect_min_size = Vector2( 200, 10 )
mouse_filter = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_constants/separation = 13
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
demo_card_path = NodePath("")

[node name="detail" type="Label" parent="list"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 2
mouse_filter = 1
theme = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "name of the "
align = 1
valign = 1
autowrap = true

[node name="new_card_name" type="LineEdit" parent="list"]
margin_top = 73.0
margin_right = 200.0
margin_bottom = 121.434
theme = ExtResource( 2 )
align = 3
clear_button_enabled = true
placeholder_text = "add new_card"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = -246.892
margin_top = 13.4437
margin_right = -46.892
margin_bottom = 491.444
rect_min_size = Vector2( 200, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 478.0
size_flags_vertical = 3
color = Color( 0.227451, 0.196078, 0.196078, 1 )

[node name="board" type="Control" parent="."]
margin_left = 132.0
margin_top = 148.0
margin_right = 912.0
margin_bottom = 535.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete_option" type="Control" parent="."]
margin_right = 1025.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="delete_option"]
margin_right = 1025.0
margin_bottom = 88.0
color = Color( 0.0745098, 0.0705882, 0.0705882, 0.654902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="delete_option"]
position = Vector2( 300.951, 45.0416 )
scale = Vector2( 0.938512, 0.933878 )
frames = SubResource( 7 )

[node name="delete_button" type="Control" parent="delete_option"]
margin_left = 254.0
margin_top = 2.0
margin_right = 348.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="new_list" to="." method="_on_new_list_pressed"]
[connection signal="text_entered" from="Control/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Control/done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="Control/cancel" to="." method="_on_cancel_pressed"]
[connection signal="text_entered" from="list/new_card_name" to="list" method="_on_new_card_name_text_entered"]
